--- a/src/app/customer/prodInfo/prod-info/prod-info.component.css
+++ b/src/app/customer/prodInfo/prod-info/prod-info.component.css
@@ -10,86 +10,175 @@
 ::-webkit-scrollbar-thumb {
     background: darkgray; 
     border-radius: 10px;
-  }
-  
-  /* Handle on hover */
-  ::-webkit-scrollbar-thumb:hover {
-    background: var(--color-yellow); 
-  }
-mat-dialog-content{
-  position: relative;
-  padding-bottom: 0.5rem;
 }
-mat-dialog-actions{
+  /* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: var(--color-yellow); 
+}
+
+h1 {
+  font-weight: 800;
+  font-size: 1.8rem;
+  font-family: 'Poppins', sans-serif;
+  margin-bottom: 0;
+}
+
+h3 {
+  font-size: 0.87rem;
+  font-family: 'Poppins', sans-serif;
+}
+
+.mat-dialog-content{ 
+  border-radius: var(--card-border-radius); 
+}
+
+::ng-deep .mat-dialog-container {
+  width: 400px;
+  border-radius: var(--card-border-radius); 
+}
+
+/* -----------------TOP BAR--------------- */
+.top-bar{
+  padding-bottom: 3rem;
+  overflow: hidden;
+  position: relative;
+  
+}
+.top-bar .close{
+  justify-content: flex-end;
+  position: absolute;
+  top: 0px;
+  right: 0px;
+}
+
+.mat-stroked-button{
+  border-radius: var(--card-border-radius);
+  background-color: var(--color-yellow);
+}
+/* ----------------MIDDLE BAR-------------------- */
+
+.middle-bar{
+  
+  background-color: green;
+}
+
+.middle-bar .product_card {
+  width: 100%;
+  padding: 0;
+  position: relative;
+  transition: all 300ms ease;
+}
+
+.img-container{
+  width: 100%;
+  height: 250px;
+  display: flex;
+  justify-content: center;  
+  background-color: whitesmoke;
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
+}
+
+mat-card div img{
+  /*this makes the image in src fit to the size specified below*/
+  width: 100%; /* Here you can use wherever you want to specify the width and also the height of the <img>*/
+  height: 100%;
+  margin: auto;
+  width: max-content;
+}
+
+mat-card-content h1{
+  padding: 1rem 1rem;
+  text-align: center;
+}
+
+mat-card-content h4{
+  text-align: center;
+}
+
+.info2 div{
+  display: flex;
+  vertical-align: middle;
+} 
+
+.info2{
+  border-bottom: 2px solid black;
+  border-top: 2px solid black;
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+  grid-template-rows: 1fr;
+  box-sizing: border-box;
+}
+
+.info2 .availability{
+  padding: 5px 5px;
+  vertical-align: middle;
+  grid-column-start: 1;
+  grid-column-end: 2;
+}
+
+.info2 .price{
+  padding: 5px 5px;
+  border-left: 2px solid black;
+  grid-column-start: 2;
+  grid-column-end: 3;
+  align-items: center;
+}
+
+.info2 div .Available{
+  color:rgb(98, 242, 98);
+}
+
+
+
+.bottom-bar{
+  background-color: pink;
+}
+/* mat-dialog-content{
+  position: relative;
+  
+} */
+
+/* mat-dialog-actions{
   position: absolute;
   z-index: 2;
   top: -10px;
-}
-  .product_card {
-    width: 100%;
-    height: max-content;
-    padding: 0;
-    position: relative;
-    transition: all 300ms ease;
-  }
+} */
+
+
   
-  .img-container{
-    width: 100%;
-    height: 250px;
-    display: flex;
-    justify-content: center;  
-    background-color: whitesmoke;
-    border-top-left-radius: 5px;
-    border-top-right-radius: 5px;
-  }
-  div.info2{
-    display: flex;
-    justify-content: space-between;
-  }
-  .info2 div{
-    display: flex;
-    vertical-align: middle;
-  }
 
-  mat-card-content {
-    padding: 23px;
-  }
-  .info2 div .Available{
-    color:rgb(98, 242, 98);
-  }
-  .info2 div .Not{
-    color: red;
-  }
-  mat-card div img{
-    /*this makes the image in src fit to the size specified below*/
-    width: 100%; /* Here you can use wherever you want to specify the width and also the height of the <img>*/
-    height: 100%;
-    margin: auto;
-    width: max-content;
-  }
 
-  mat-dialog-actions{
-    display: flex;
-    justify-content: center;
-    padding-bottom: 0.5rem;
-    top: 56px;
-    left: 779px;
-  }
 
-  mat-card-actions button, mat-dialog-actions button{
-    background-color: var(--color-yellow);
-  }
 
-  /* top-bar X button style (needs more perhaps) */
-.top-bar .mat-stroked-button{
-  border-radius: var(--card-border-radius);
+/* mat-card-content {
+  padding: 23px;
+} */
+
+
+
+/* mat-dialog-actions{
+  display: flex;
+  justify-content: center;
+  padding-bottom: 0.5rem;
+  top: 56px;
+  left: 779px;
 }
+ */
+/* mat-card-actions button, mat-dialog-actions button{
+  background-color: var(--color-yellow);
+}
+ */
+  /* top-bar X button style (needs more perhaps) */
+/* .top-bar .mat-stroked-button{
+  border-radius: var(--card-border-radius);
+} */
   /* to make the dialogcontainer have the same border radius as our other elements */
-::ng-deep .mat-dialog-container {
+/* ::ng-deep .mat-dialog-container {
   width: 474px;
   border-radius: var(--card-border-radius); 
-}
-  .prod-price{
+} */
+/*   .prod-price{
     position: absolute;
     right: 0;
   }
@@ -97,4 +186,4 @@ mat-dialog-actions{
   input { 
     text-align: center; 
 }
-
+ */
