prod-list ui changes

--- a/src/app/customer/customer-prodlist/customer-prodlist.component.html
+++ b/src/app/customer/customer-prodlist/customer-prodlist.component.html
@@ -90,6 +90,6 @@
 
     <!-- NO data     -->
     <ng-template #noData>
-        <div>No data matching the filter "{{input.value}}"</div>
+        <h1>No data matching the filter!</h1>
     </ng-template>
 </div>
