--- a/src/app/customer/customer-prodlist/customer-prodlist.component.html
+++ b/src/app/customer/customer-prodlist/customer-prodlist.component.html
@@ -1,3 +1,4 @@
+<div class="mainn">
 <div class="header-txt">
     <div>
         <h1>Valued customer, welcome to <b>Romel's Store.</b></h1>
@@ -92,4 +93,5 @@
     <ng-template #noData>
         <h1>No data matching the filter!</h1>
     </ng-template>
+</div>
 </div>
