--- a/src/app/customer/cart/cart.component.css
+++ b/src/app/customer/cart/cart.component.css
@@ -71,7 +71,9 @@ border-radius: 10px;
     position: inherit;
     width: 70%;
     height: 10%;
+    margin-top: 5px;
     margin-right: 50px;
+    margin-left: 50px;
 }
     /* ROUNDED TABLE FORMAT */
 
